src/Utilities/_Full-bleed.scss
// Full bleed utility
//
// Andy Bell full-bleed class
// https://archive.hankchizljaw.com/wrote/creating-a-full-bleed-css-utility/
// ––––––––––––––––––––––––––––––––––––––––––––––––––

.full-bleed {
  max-width: unset; // In case we are using an img element
  width: 100vw;
  margin-left: 50%;
  transform: translateX(-50%);
}

